--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,4 +15,9 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <com.zjn.easyplayer.NiceVideoPlayer
+        android:id="@+id/nvp_ykvideo_player"
+        android:layout_width="match_parent"
+        android:layout_height="180dp"/>
+
 </android.support.constraint.ConstraintLayout>
