--- a/easyplayer/src/main/res/layout/tx_video_palyer_controller.xml
+++ b/easyplayer/src/main/res/layout/tx_video_palyer_controller.xml
@@ -77,7 +77,7 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_palyer_brightness"/>
+            android:src="@mipmap/ic_palyer_brightness"/>
 
         <ProgressBar
             android:id="@+id/change_brightness_progress"
@@ -105,7 +105,7 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_palyer_volume"/>
+            android:src="@mipmap/ic_palyer_volume"/>
 
         <ProgressBar
             android:id="@+id/change_volume_progress"
@@ -125,31 +125,31 @@
         android:layout_height="match_parent"
         android:background="#6c0b0b0b"
         android:gravity="center"
-        android:orientation="horizontal"
-        android:visibility="gone">
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/replay"
-            android:layout_width="0dp"
-            android:layout_weight="1"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/ic_player_replay"
+            android:drawableLeft="@mipmap/ic_player_replay"
             android:drawablePadding="4dp"
             android:padding="8dp"
             android:text="重新播放"
+            android:gravity="center_vertical"
             android:textColor="@android:color/white"
             android:textSize="13sp"/>
 
         <TextView
             android:id="@+id/share"
-            android:layout_width="0dp"
-            android:layout_weight="1"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="64dp"
-            android:drawableLeft="@drawable/ic_palyer_share"
+            android:drawableLeft="@mipmap/ic_palyer_share"
             android:drawablePadding="4dp"
             android:padding="8dp"
             android:text="分享"
+            android:gravity="center_vertical"
+            android:visibility="gone"
             android:textColor="@android:color/white"
             android:textSize="13sp"/>
     </LinearLayout>
@@ -189,7 +189,7 @@
         android:id="@+id/top"
         android:layout_width="match_parent"
         android:layout_height="42dp"
-        android:background="@drawable/player_mask_top"
+        android:background="@mipmap/player_mask_top"
         android:gravity="center_vertical"
         android:paddingLeft="8dp"
         android:paddingRight="8dp">
@@ -198,7 +198,7 @@
             android:id="@+id/back"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:src="@drawable/ic_player_back"
+            android:src="@mipmap/ic_player_back"
             android:visibility="visible"/>
 
         <TextView
@@ -224,7 +224,7 @@
                 android:id="@+id/battery"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/battery_100"/>
+                android:src="@mipmap/battery_100"/>
 
             <TextView
                 android:id="@+id/time"
@@ -241,7 +241,7 @@
         android:layout_width="match_parent"
         android:layout_height="42dp"
         android:layout_alignParentBottom="true"
-        android:background="@drawable/player_mask_bottom"
+        android:background="@mipmap/player_mask_bottom"
         android:gravity="center_vertical"
         android:paddingLeft="8dp"
         android:paddingRight="8dp">
@@ -250,7 +250,7 @@
             android:id="@+id/restart_or_pause"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:src="@drawable/ic_player_start"/>
+            android:src="@mipmap/ic_player_start"/>
 
         <TextView
             android:id="@+id/position"
@@ -303,7 +303,7 @@
             android:id="@+id/full_screen"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:src="@drawable/ic_player_enlarge"/>
+            android:src="@mipmap/ic_player_enlarge"/>
     </LinearLayout>
     <!--右下角初始显示的总时长-->
     <TextView
@@ -321,10 +321,10 @@
     <!--中间开始播放按钮-->
     <ImageView
         android:id="@+id/center_start"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_centerInParent="true"
-        android:src="@drawable/ic_player_center_start"
+        android:background="@mipmap/ic_player_center_start"
         android:visibility="visible"/>
 
 </RelativeLayout>
