添加home到桌面  回来 续放

--- a/easyplayer/src/main/res/layout/tx_video_palyer_controller.xml
+++ b/easyplayer/src/main/res/layout/tx_video_palyer_controller.xml
@@ -125,7 +125,8 @@
         android:layout_height="match_parent"
         android:background="#6c0b0b0b"
         android:gravity="center"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:visibility="gone">
 
         <TextView
             android:id="@+id/replay"
